NetBSD Problem Report #52805

From o.vd.linden@quicknet.nl  Sun Dec 10 08:02:42 2017
Return-Path: <o.vd.linden@quicknet.nl>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 937B57A177
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 10 Dec 2017 08:02:42 +0000 (UTC)
Message-Id: <20171210080227.GA26915@sheep>
Date: Sun, 10 Dec 2017 09:02:27 +0100
From: Onno van der Linden <o.vd.linden@quicknet.nl>
To: gnats-bugs@netbsd.org
Subject: typo in src/sys/sys/ptrace.h

>Number:         52805
>Category:       kern
>Synopsis:       typo in /usr/src/sys/sys/ptrace.h
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Dec 10 08:05:00 +0000 2017
>Closed-Date:    Sun Dec 10 10:58:06 +0000 2017
>Last-Modified:  Sat Apr 14 10:55:00 +0000 2018
>Originator:     Onno van der Linden
>Release:        NetBSD 8.99.8
>Organization:
>Environment:
	<The following information is extracted from your kernel. Please>
	<append output of "ldd", "ident" where relevant (multiple lines).>
System: NetBSD sheep 8.99.8 NetBSD 8.99.8 (SHEEPKMS) #1: Mon Dec 4 16:43:49 CET 2017 onno@sheep:/usr/src/sys/arch/i386/compile/SHEEPKMS i386
Architecture: i386
Machine: i386
>Description:
There seems to be a typo in the forward declaration of a struct in
/sys/sys/ptrace.h
>How-To-Repeat:
compare the blocks for PT_{GET,SET}REGS and PT_{GET,SET}FPREGS
to PT_{GET,SET}DBREGS and spot the difference
>Fix:
--- /usr/src/sys/sys/ptrace.h   2017-03-25 08:48:49.355816361 +0100
+++ /usr/src/sys/sys/ptrace.h.new       2017-12-10 08:52:26.526268222 +0100
@@ -176,7 +176,7 @@
 #endif

 #if defined(PT_GETDBREGS) || defined(PT_SETDBREGS)
-struct fpreg;
+struct dbreg;
 #ifndef process_dbreg32
 #define process_dbreg32 struct dbreg
 #endif

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 10 Dec 2017 10:58:06 +0000
State-Changed-Why:
Commited, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52805 CVS commit: src/sys/sys
Date: Sun, 10 Dec 2017 10:56:51 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Dec 10 10:56:50 UTC 2017

 Modified Files:
 	src/sys/sys: ptrace.h

 Log Message:
 PR kern/52805: fix copy & pasto, from Onno van der Linden.


 To generate a diff of this commit:
 cvs rdiff -u -r1.60 -r1.61 src/sys/sys/ptrace.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52805 CVS commit: [netbsd-8] src/sys/sys
Date: Sat, 14 Apr 2018 10:53:15 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Apr 14 10:53:15 UTC 2018

 Modified Files:
 	src/sys/sys [netbsd-8]: ptrace.h

 Log Message:
 Pull up following revision(s) (requested by kamil in ticket #756):

 	sys/sys/ptrace.h: revision 1.61

 PR kern/52805: fix copy & pasto, from Onno van der Linden.


 To generate a diff of this commit:
 cvs rdiff -u -r1.60.6.2 -r1.60.6.3 src/sys/sys/ptrace.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:
 	<Please check that the above is correct for the bug being reported,>
 	<and append source date of snapshot, if applicable (one line).>

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.