PR kern/52805: fix copy & pasto, from Onno van der Linden.